--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Fix these bugs or we're gonna be fired!!!</title>
-    <link rel="stylesheet" href="./base.css">
-  </head>
-  <body>
 
-    <h2>How broken is that?!</h2>
-    <div class="fixme1">
-      <img class="one" src="gradient.png"/>
-      <img class="two" src="gradient.png"/>
-      <img class="tri" src="gradient.png"/>
-    </div>
+<head>
+  <meta charset="utf-8">
+  <title>Fix these bugs or we're gonna be fired!!!</title>
+  <link rel="stylesheet" href="./base.css">
+  <link rel="stylesheet" href="solution.css">
+</head>
 
-    <h2>OMG please fix this!</h2>
-    <div class="fixme2">
-      <div class="one">-.-</div>
-      <div class="two">-.-</div>
-      <div class="tri">-.-</div>
-    </div>
+<body>
 
-    <h2>This is so wrong!</h2>
-    <ul class="fixme3">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About DCI</a></li>
-      <li><a href="#students">Students area</a></li>
-      <li><a href="#contact">CheckYarSlack</a></li>
-    </ul>
+  <h2>How broken is that?!</h2>
+  <div class="fixme1">
+    <img class="one" src="gradient.png" />
+    <img class="two" src="gradient.png" />
+    <img class="tri" src="gradient.png" />
+  </div>
 
-  </body>
+  <h2>OMG please fix this!</h2>
+  <div class="fixme2">
+    <div class="one">-.-</div>
+    <div class="two">-.-</div>
+    <div class="tri">-.-</div>
+  </div>
+
+  <h2>This is so wrong!</h2>
+  <ul class="fixme3">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About DCI</a></li>
+    <li><a href="#students">Students area</a></li>
+    <li><a href="#contact">CheckYarSlack</a></li>
+  </ul>
+
+</body>
+
 </html>
